commit as of Nov 27

--- a/blank_html.html
+++ b/blank_html.html
@@ -52,12 +52,12 @@
               <th>PY_FY@FBP17</th>
               <th>JU_FY@FBP17</th>
               <th>JU_SEP@FBP17</th>
-              <th>PY_%_OPS</th>
+              <!-- <th>PY_%_OPS</th>
               <th>PY_$</th>
               <th>FBP_%</th>
               <th>FBP_$</th>
               <th>JU_%</th>
-              <th>JU_$</th>
+              <th>JU_$</th> -->
             </tr>
         </thead>
         <tbody data-bind="foreach: parsedData">
