--- a/blank_html.html
+++ b/blank_html.html
@@ -124,7 +124,7 @@
   <script type="text/javascript" src="js/lib/w2ui.min.js"></script>
   <!--<script type='text/javascript' src='js/lib/knockout.mapping.js'></script>-->
   <script type='text/javascript' src='js/lib/papaparse.min.js'></script>
-  <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+  <!-- <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src='js/csvdata.js'></script>
   <script src='js/report_generator.js'></script>
